# Deadwater

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.js  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pages.yml
docs/: index.html
public/: humans.txt  index.html  manifest.json  robots.txt  sw.js
public/.well-known/: ai-plugin.json  ai.txt  security.txt
public/api/docs/: openapi.json  openapi.yaml
src/deadwater/: __init__.py
src/deadwater/core/: engine.py  index.py
src/deadwater/models/: article.py  author.py
tests/: test_engine.py
